# arr-telegram-bot

./: .gitignore  .tool-versions  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  mise.toml  pyproject.toml
.github/workflows/: build.yml
pkg/imdb/: imdb.go
pkg/tdvb/: tvdb.go
src/: main.py
src/lib/: imdb.py  tvdb.py
